update ruc notes

--- a/p/ruc-study-framework/index.html
+++ b/p/ruc-study-framework/index.html
@@ -273,6 +273,8 @@
           <ol>
             <li><a href="#20250716">2025.07.16</a></li>
             <li><a href="#20250916">2025.09.16</a></li>
+            <li><a href="#20250917">2025.09.17</a></li>
+            <li><a href="#20250919">2025.09.19</a></li>
           </ol>
         </li>
       </ol>
@@ -375,7 +377,7 @@
 <h1 id="科研日记">科研日记
 </h1><p>用来记录我远程实习的日子</p>
 <h4 id="20250716">2025.07.16
-</h4><p>成为赵老师的本科实习生，暑假跟着志朋师兄做了一个横向</p>
+</h4><p>成为赵老师的本科实习生，暑假跟着师兄做了一个横向</p>
 <h5 id="家里网好差本来服务器就慢还是要在学校多用功">家里网好差（本来服务器就慢），还是要在学校多用功
 </h5><p>暑假一共6周，还有各种事情，加上休息吃饭探亲balabala也做不了太多事情。确定了方向，看了一些知乎上的论文解读（后面发现如果要通透还是要看原文）。</p>
 <h4 id="20250916">2025.09.16
@@ -437,6 +439,34 @@ data.return_full_prompt=True
 data.return_raw_chat=True
 用户输入：你好，介绍一下强化学习
 返回的就是:你好，介绍一下强化学习</p></blockquote>
+<h4 id="20250917">2025.09.17
+</h4><p>早晨起来去工位继续看verl</p>
+<blockquote>
+<p>actor_rollout_ref.hybrid_engine：是否是混合引擎，目前只支持混合引擎.</p></blockquote>
+<blockquote>
+<p>Dropout 是一种 正则化方法，用来防止神经网络过拟合。在训练时，随机“丢弃”一部分神经元（让它们暂时不参与计算和更新）。推理时,不再丢弃任何神经元，只是使用完整的输出。</p></blockquote>
+<blockquote>
+<p>actor_rollout_ref.model.use_remove_padding一般都选true移除<code>&lt;PAD&gt;</code>来加速推理，但是多模态或者大工程里仍有人使用false</p></blockquote>
+<blockquote>
+<p>Temperature （温度）。T = 1 → 正常分布。T &gt; 1 → 分布更平滑，增加随机性，容易生成多样化甚至跑偏的内容。T &lt; 1 → 分布更尖锐，模型更确定（更倾向选概率最高的 token，输出保守）。<br>
+Top-k：从 softmax 排序后的前 k 个 token 中随机抽样。<br>
+Top-p：动态选择前 累计概率 ≥ p 的最小 token 集合，从里面采样。</p></blockquote>
+<blockquote>
+<p>Actor:负责 更新参数<br>
+Ref (Reference Model):负责 对比/约束。它是冻结的（不更新），通常是最初的预训练模型。<br>
+Rollout:负责 产生输出（推理采样）</p></blockquote>
+<blockquote>
+<p>EOS = End Of Sequence（序列结束标记）。在 tokenizer 里，EOS 往往是个特殊的 <code>&lt;/s&gt;</code> 或 <code>&lt;eos&gt;</code> 符号。ignore_eos=True 在训练中一般少用，除非你需要 生成固定长度序列，或者想收集超过 EOS 的 rollouts 数据。</p></blockquote>
+<h4 id="20250919">2025.09.19
+</h4><blockquote>
+<p>一个深度学习训练任务中，nodes 指的是计算机，而 gpus-per-node 指的是每台计算机上安装的 GPU 数量。<br>
+可以把 nodes 理解为一台台服务器，每台服务器里可以插上多张显卡（GPU）。<br>
+nnodes: 1：你正在使用一台计算机来运行任务。<br>
+n_gpus_per_node: 8：这台计算机上插了 8 张 GPU。<br>
+所以，这个配置的意思是，你用一台装有 8 张 GPU 的服务器来运行你的任务。</p></blockquote>
+<p>verl官方文档看完了，嗯。。还是要去看仓库</p>
+<p>都在赶iclr导致服务器又变得卡卡的</p>
+<p>实验复现遇到了问题导致一直是卡住的状态</p>
 
 </section>
 
