--- a/p/ruc-study-framework/index.html
+++ b/p/ruc-study-framework/index.html
@@ -275,6 +275,7 @@
             <li><a href="#20250916">2025.09.16</a></li>
             <li><a href="#20250917">2025.09.17</a></li>
             <li><a href="#20250919">2025.09.19</a></li>
+            <li><a href="#20250920">2025.09.20</a></li>
           </ol>
         </li>
       </ol>
@@ -467,6 +468,54 @@ n_gpus_per_node: 8：这台计算机上插了 8 张 GPU。<br>
 <p>verl官方文档看完了，嗯。。还是要去看仓库</p>
 <p>都在赶iclr导致服务器又变得卡卡的</p>
 <p>实验复现遇到了问题导致一直是卡住的状态</p>
+<p>神器：</p>
+<blockquote>
+<p>pkill -9 -u $USER -f ray</p></blockquote>
+<h4 id="20250920">2025.09.20
+</h4><p>ray官方仓库，试图解决Ray实例后ray.init()挂起/失败问题</p>
+<blockquote>
+<p>import  ray
+ray.init()
+2025-09-20 11:44:47,741 INFO worker.py:1538 &ndash; Started a local Ray instance.</p></blockquote>
+<p>有时候会卡住</p>
+<blockquote>
+<p>python
+import  ray
+ray.init()
+2025-09-20 11:44:47,741 INFO worker.py:1538 &ndash; Started a local Ray instance.</p></blockquote>
+<p>有时候会失败</p>
+<blockquote>
+<p>[2025-09-20 11:50:22,050 E 31652 31652] core_worker.cc:179: Failed to register worker 01000000ffffffffffffffffffffffffffffffffffffffffffffffff to Raylet. IOError: [RayletClient] Unable to register worker with raylet. No such file or directory</p></blockquote>
+<h5 id="versionsdependencies">Versions/Dependencies
+</h5><p>Python 3.10
+Ray
+grpcio
+OS:</p>
+<h5 id="reproduction-script">Reproduction script
+</h5><blockquote>
+<p>import ray
+ray.init()</p></blockquote>
+<h5 id="issue-severity">Issue Severity
+</h5><p>High:It blocks me from completing my task.</p>
+<p>可能的原因:1.workers实际上没有启动
+2.系统中一个进程可以创建多少个线程？（可以通过cat /proc/sys/kernel/threads-max查看）</p>
+<p>`
+可能的方法:1.在import ray后添加 ray.init(num_cpus=56, num_gpus=2)  这个方法很多人似乎有帮助，但不是一个好的解决方案
+2.可以看一下/tmp/ray/session_latest/raylet.out,如果在/tmp/ray/session_latest/看到有前缀python-core-worker- 的可以看一下，因为这个能了解工作进程可能发生了什么
+3.升级grpcio,2023年的时候安装grpcio 1.48.1 版本是有用的,相应的venv是 CentOS 7,Python 3.7.11，Ray 2.5.1,grpcio1.48.1
+4.</p>
+<blockquote>
+<p>#!/bin/bash
+ulimit -n 65536
+python3 -m verl.trainer.main_ppo &hellip;</p></blockquote>
+<p>5.一定要设置参数,只是用ray.init()就会崩溃。需要手动设置num_cpus</p>
+<p>其他人：
+2024.1.16也有在Ubuntu 20.04上遇到同样的问题 venv: ray == 2.7.1,grpcio == 1.59.2,python == 3.11.5
+2024.4.2有在ubuntu 22.04.3（docker内部）上遇到同样的问题，但是他只是失败，而不是挂起。在docker之外运行良好（他的M1 MacBook上）</p>
+<p>2024.4.14，2024.4.17，2024.7.11等等太多人遇到同样的问题了</p>
+<p>15点左右</p>
+<h5 id="问题已解决在import-ray后添加-rayinitnum_cpus56-num_gpus2">问题已解决！在import ray后添加 ray.init(num_cpus=56, num_gpus=2)
+</h5><p>今天最开心的事情，自己成功看issue，扒仓库源码等等解决了这个问题</p>
 
 </section>
 
