--- a/p/ray.init初始化挂起/失败问题的解决/index.html
+++ b/p/ray.init初始化挂起/失败问题的解决/index.html
@@ -509,7 +509,7 @@ Ubuntu 24.04.2 LTS</p>
         
         
             <div class="article-image">
-                <img src="/p/ruc-study-framework/RUC.328e8b172986eb21c4664f1f72f9ff8d.328e8b172986eb21c4664f1f72f9ff8d_hu_8a72e864ae58e09.jpg" 
+                <img src="/p/ruc-study-framework/RUC.328e8b172986eb21c4664f1f72f9ff8d_hu_8a72e864ae58e09.jpg" 
                         width="250" 
                         height="150" 
                         loading="lazy"
