--- a/p/ruc-study-framework/index.html
+++ b/p/ruc-study-framework/index.html
@@ -567,7 +567,7 @@ python3 -m verl.trainer.main_ppo &hellip;</p></blockquote>
         
         
             <div class="article-image">
-                <img src="/p/ray.init%E5%88%9D%E5%A7%8B%E5%8C%96%E6%8C%82%E8%B5%B7/%E5%A4%B1%E8%B4%A5%E9%97%AE%E9%A2%98%E7%9A%84%E8%A7%A3%E5%86%B3/Ray.c64a43cfcd8e30845b7034d2be973cdf.c64a43cfcd8e30845b7034d2be973cdf_hu_39e0cf0a02b216da.jpg" 
+                <img src="/p/ray.init%E5%88%9D%E5%A7%8B%E5%8C%96%E6%8C%82%E8%B5%B7/%E5%A4%B1%E8%B4%A5%E9%97%AE%E9%A2%98%E7%9A%84%E8%A7%A3%E5%86%B3/Ray.c64a43cfcd8e30845b7034d2be973cdf_hu_39e0cf0a02b216da.jpg" 
                         width="250" 
                         height="150" 
                         loading="lazy"
