--- a/p/verl沉淀/index.html
+++ b/p/verl沉淀/index.html
@@ -424,7 +424,7 @@ update actor（无需修改）</p>
         
         
             <div class="article-image">
-                <img src="/p/pass@k%E8%AE%BA%E6%96%87%E8%A7%A3%E8%AF%BB%E5%8F%8A%E5%85%B6%E5%A4%8D%E7%8E%B0/ByteDance.6da9e1b9aa6df50ac5367b6073754ad5_hu_1b7bcd98cfe762af.jpg" 
+                <img src="/p/pass@k%E8%AE%BA%E6%96%87%E7%B2%BE%E8%AF%BB%E5%8F%8A%E5%85%B6%E5%A4%8D%E7%8E%B0/ByteDance.6da9e1b9aa6df50ac5367b6073754ad5_hu_1b7bcd98cfe762af.jpg" 
                         width="250" 
                         height="150" 
                         loading="lazy"
