update SJTU remote research intern notes

--- a/p/ray分布式训练因进程耗尽导致ssh断开连接/index.html
+++ b/p/ray分布式训练因进程耗尽导致ssh断开连接/index.html
@@ -411,7 +411,7 @@
         
         
             <div class="article-image">
-                <img src="/p/%E5%A4%A7%E5%9E%8B%E6%8E%A8%E7%90%86%E6%A8%A1%E5%9E%8B%E7%9A%84%E5%BC%BA%E5%8C%96%E5%AD%A6%E4%B9%A0%E7%BB%BC%E8%BF%B0%E7%B2%BE%E8%AF%BB/sky.4d4f57a94652582b13e95c39a8361402.4d4f57a94652582b13e95c39a8361402_hu_1ffe5d9fa2732f7b.jpg" 
+                <img src="/p/%E5%A4%A7%E5%9E%8B%E6%8E%A8%E7%90%86%E6%A8%A1%E5%9E%8B%E7%9A%84%E5%BC%BA%E5%8C%96%E5%AD%A6%E4%B9%A0%E7%BB%BC%E8%BF%B0%E7%B2%BE%E8%AF%BB/sky.4d4f57a94652582b13e95c39a8361402_hu_1ffe5d9fa2732f7b.jpg" 
                         width="250" 
                         height="150" 
                         loading="lazy"
