--- a/p/sjtu-intern/index.html
+++ b/p/sjtu-intern/index.html
@@ -272,6 +272,7 @@
         <li>
           <ol>
             <li><a href="#20251023">2025/10/23</a></li>
+            <li><a href="#20251027">2025/10/27</a></li>
           </ol>
         </li>
       </ol>
@@ -359,6 +360,12 @@
     
     <h4 id="20251023">2025/10/23
 </h4><p>实习第一天</p>
+<h4 id="20251027">2025/10/27
+</h4><p>周六凌晨开始跑的论文复现，当时为了图速度就没有顾虑太多。今天学姐问我一些实验过程中的指标变化等等来对比idea的实验是否正常工作，只能回去手动复制tmux里面的内容。</p>
+<p>每跑一次实验都要记得能留日志就留日志，能上wandb/Swanlab就上，跑完的实验数据等等都要保存，留着。后续可能会用到。</p>
+<p>千万不要一味地追求速度，图省事！</p>
+<p>与此同时解决了submodule问题，具体的流程大致为删掉子仓库中的.git，移除本地缓存（觉得他是子module），从.gitmodule中移除（当然我本地没有）。</p>
+<p>之前也解决了关于代码冲突的问题（需要手动进行修改），比如在git pull中是常见问题，大致进一步又了解了，准备后面有时间写一个关于这种多人协作常出现的问题，要注意的事项以及如何解决，最近太忙了，而且有很多优先级更高的事情等着我去做！</p>
 
 </section>
 
