--- a/p/ruc-study-framework/index.html
+++ b/p/ruc-study-framework/index.html
@@ -515,7 +515,7 @@ python3 -m verl.trainer.main_ppo &hellip;</p></blockquote>
 <p>2024.4.14，2024.4.17，2024.7.11等等太多人遇到同样的问题了</p>
 <p>15点左右,/yhy/verl/trainer/config/ppo_trainer.yaml配置文件中进行修改</p>
 <h5 id="问题已解决在import-ray后添加-rayinitnum_cpus56-num_gpus2">问题已解决！在import ray后添加 ray.init(num_cpus=56, num_gpus=2)
-</h5><p>今天最开心的事情，自己成功看issue，扒仓库源码等等解决了这个问题</p>
+</h5><p>自己看issue，扒仓库源码等等解决了这个问题</p>
 <h4 id="20251022">2025.10.22
 </h4><p>结束了第一段实习，收获满满！<br>
 谢谢师兄！谢谢赵老师！<br>
